# OrthoFinder

./: .gitignore  MANIFEST.in  Makefile  README.md  _config.yml  about.markdown  config.json  index.markdown  orthofinder.py  pyproject.toml  requirements.txt  setup.py  user_config.json
.github/workflows/: dev_master.yml
BENCHMARK_OrthoFinderV255/OrthoFinder/Results_diamond-mafft-fasttree/Orthologues/Orthologues_Mycoplasma_agalactiae/: Mycoplasma_agalactiae__v__Mycoplasma_gallisepticum.tsv
BENCHMARK_OrthoFinderV255/OrthoFinder/Results_diamond-mafft-fasttree/Orthologues/Orthologues_Mycoplasma_gallisepticum/: Mycoplasma_gallisepticum__v__Mycoplasma_hyopneumoniae.tsv
_data/: team.yaml
_includes/: download-count.html  footer.html  head.html  header.html  read-time.html  team-card.html  updated-times.html
_layouts/: base.html  page.html  post.html  tutorial.html
_posts/: 2025-05-07-OrthoFinder-v3.1.0.markdown
_sass/minima/: _base.scss  _layout.scss  custom-styles.scss  custom-variables.scss
_site/: feed.xml  index.html
_site/about/: index.html
_site/assets/css/: style.css
_site/assets/team/: david-emms.jfif  jonathan-holmes.jfif  萌兰.jpeg:Zone.Identifier
_site/download/: index.html
_site/download_and_install/: index.html
_site/faq/: index.html
_site/installation/: index.html
_site/older-versions/: index.html
_site/release/07/05/2025/: OrthoFinder-v3.1.0.html
_site/tutorial/: index.html
_site/tutorials/: Advanced-Tutorial.html  Advanced-Usage.html
_site/tutorials/advanced-tutorial/: index.html
_site/tutorials/advanced-usage/: index.html
_site/tutorials/beginner-tutorial/: index.html
_site/tutorials/gettting-input-data/: index.html
_site/tutorials/guide-to-results/: index.html
_site/tutorials/understand-orthology/: index.html
_tutorials/: 2025-05-07-Advanced-Tutorial.markdown  2025-05-07-Advanced-Usage.markdown  advanced-tutorial.md  advanced-usage.md  beginner-tutorial.md  gettting-input-data.md  guide-to-results.md  understand-orthology.md
docs/: download.markdown  faq.markdown  installation.markdown  old-versions.markdown  tutorials.markdown
src/orthofinder/: __init__.py  _version.py
src/orthofinder/comparative_genomics/: helpinfo.py  orthologues.py  stats.py
src/orthofinder/file_updates/: file_updates.py  hogs.py  ogs.py  trees.py
src/orthofinder/gene_tree_inference/: infer_trees.py  trees2ologs_of.py
src/orthofinder/legacy/docs/: notes.py
src/orthofinder/legacy/utils/: get_max_bitscores.py  lil_min_max.py
src/orthofinder/orthogroups/: accelerate.py  gathering.py  orthogroups_set.py  sample_genes.py
src/orthofinder/run/: __main__.py  check_dependencies.py  config.json  helpinfo.py  process_args.py  run_commands.py  run_info.py  species_info.py
src/orthofinder/tools/: astral.py  dendroblast.py  mcl.py  newick.py  trees_msa.py  waterfall.py
src/orthofinder/tools/ete4/: ete_format.py  indent.py  newick.pyx  operations.pyx  text_viz.py  tree.pyx  utils.py
src/orthofinder/utils/: fasta_processor.py  files.py  matrices.py  parallel_task_manager.py  program_caller.py  split_ortholog_files.py  util.py
tests/test_reconfig/: benchmark_compare.py  conftest.py
tools/: convert_orthofinder_tree_ids.py  create_files_for_hogs.py  make_ultrametric.py  ncbi_primary_transcripts.py
(+3 files in other folders)
