[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "orthofinder"
authors = [
    { name = "David Emms", email = "david_emms@hotmail.com" },
    { name = "Jonathan Holmes", email = "jonathan.holmes@biology.ox.ac.uk" },
    { name = "Laurence Belcher", email = "laurence.belcher@biology.ox.ac.uk" },
    { name = "Yi Liu", email = "caoxen7ys@yahoo.com" },
]
description = "Phylogenetic orthology inference for comparative genomics"
readme = "README.md"
dynamic = ["version"]
# version = "3.1.0"
requires-python = ">=3.8"
keywords = [
    "comparative genomics",
    "Orthology inference",
    "Phylogeneticrelationships",
]
license = "LGPL-3.0-only"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',

    # Pick your license as you wish (should match "license" above)
    # 'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',

    # Specify the Python versions you support here.
    'Programming Language :: Python :: 3.8',  # tested
    'Programming Language :: Python :: 3.9',  # tested
    "Programming Language :: Python :: 3.10", # base version, tested
    "Programming Language :: Python :: 3.11", # tested
    "Programming Language :: Python :: 3.12", # tested
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "biopython",
    "rich",
    "ete4",
    "six",
]

[project.urls]
repository = "https://github.com/OrthoFinder/OrthoFinder"

[project.optional-dependencies]
build = ["build", "twine", "wheel"]
dev = [
    "python-semantic-release",
    "pytest",
    "pytest-cov",
    "setuptools>=77",
    "setuptools_scm>=8",
    "packaging>=24.2",
]

[project.scripts]
orthofinder = "orthofinder.run.__main__:main"
primary_transcript = "tools.primary_transcript:main"
make_ultrametric = "tools.make_ultrametric:main"
convert_orthofinder_tree_ids = "tools.convert_orthofinder_tree_ids:main"

[tool.semantic_release]
branch = "master"
version_source = "tag"
# upload_to_pypi = true
upload_to_release = true
build_command = "python -m build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["orthofinder*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"orthofinder.bin" = ["*"]
"orthofinder.bin.mafft.bin" = ["*"]
"orthofinder.run" = ["*.json"]
"ExampleData" = ["*"]
"*" = ["LICENSE"]

[tool.setuptools.exclude-package-data]
orthofinder = ["**/__pycache__", "**/*.pyc"]
"*" = ["tests/**"]

[tool.pytest.ini_options]
addopts = "--cov=orthofinder"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "disabled: marks tests as disabled (deselect with '-m \"not disabled\"')",
    "regression: marks a test as a regression test",
]


[tool.setuptools_scm]
write_to = "src/orthofinder/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "3.1.0"
